add real time, AI assisted translation of chats